# scan-to-epub

./: .gitignore  LICENSE  README.md  app.py  cli.py  pyproject.toml
scan_to_epub/: __init__.py  config.py  epub.py  extractor.py
