[project]
name = "scan-to-epub"
version = "0.1.0"
description = "Extract text from scanned book pages and convert them to EPUB."
requires-python = ">=3.11"
dependencies = [
    "docling",
    "easyocr",
    "ebooklib",
    "markdown",
    "streamlit",
]

[project.scripts]
scan-to-epub = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scan_to_epub"]
